@@ -118,15 +118,16 @@ List of factors, used to expand/compress the time scale.  See `vc-annotate'."
 
 (defvar vc-annotate-mode-map
   (let ((m (make-sparse-keymap)))
-    (define-key m "A" 'vc-annotate-revision-previous-to-line)
-    (define-key m "D" 'vc-annotate-show-diff-revision-at-line)
+    (define-key m "a" 'vc-annotate-revision-previous-to-line)
+    (define-key m "d" 'vc-annotate-show-diff-revision-at-line)
+    (define-key m "D" 'vc-annotate-show-changeset-diff-revision-at-line)
     (define-key m "f" 'vc-annotate-find-revision-at-line)
-    (define-key m "J" 'vc-annotate-revision-at-line)
-    (define-key m "L" 'vc-annotate-show-log-revision-at-line)
-    (define-key m "N" 'vc-annotate-next-revision)
-    (define-key m "P" 'vc-annotate-prev-revision)
-    (define-key m "W" 'vc-annotate-working-revision)
-    (define-key m "V" 'vc-annotate-toggle-annotation-visibility)
+    (define-key m "j" 'vc-annotate-revision-at-line)
+    (define-key m "l" 'vc-annotate-show-log-revision-at-line)
+    (define-key m "n" 'vc-annotate-next-revision)
+    (define-key m "p" 'vc-annotate-prev-revision)
+    (define-key m "w" 'vc-annotate-working-revision)
+    (define-key m "v" 'vc-annotate-toggle-annotation-visibility)
     m)
   "Local keymap used for VC-Annotate mode.")
 
